--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "fs-extra": "^0.26.3",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-jade": "^1.1.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-rev": "^6.0.1",
+    "gulp-rev-replace": "^0.4.3",
+    "gulp-sequence": "^0.4.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.1.2",
     "gulp-util": "^3.0.7",
