--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-jade": "^1.1.0",
     "gulp-plumber": "^1.0.1",
@@ -22,6 +23,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.1.2",
     "gulp-util": "^3.0.7",
-    "jstransformer-markdown-it": "^0.2.2"
+    "jstransformer-markdown-it": "^0.2.2",
+    "through2": "^2.0.0"
   }
 }
