mq setup started

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.1.2",
     "gulp-util": "^3.0.7",
+    "hammerjs": "^2.0.6",
+    "jquery": "^2.1.4",
     "jstransformer-markdown-it": "^0.2.2",
     "through2": "^2.0.0"
   }
