--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-gh-pages": "^0.5.4",
     "gulp-jade": "^1.1.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-replace": "^0.5.4",
     "gulp-rev": "^6.0.1",
     "gulp-rev-replace": "^0.4.3",
     "gulp-sequence": "^0.4.4",
