--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
+    "gulp-front-matter": "^1.3.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-jade": "^1.1.0",
     "gulp-plumber": "^1.0.1",
@@ -27,6 +28,7 @@
     "hammerjs": "^2.0.6",
     "jquery": "^2.1.4",
     "jstransformer-markdown-it": "^0.2.2",
-    "through2": "^2.0.0"
+    "through2": "^2.0.0",
+    "vinyl": "^1.1.0"
   }
 }
