--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "jstransformer-markdown-it": "^0.2.2",
     "through2": "^2.0.0",
     "vinyl": "^1.1.0"
+  },
+  "dependencies": {
+    "clipboard": "^1.5.5"
   }
 }
