--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vinyl": "^1.1.0"
   },
   "dependencies": {
-    "clipboard": "^1.5.5"
+    "clipboard": "^1.5.5",
+    "prismjs": "^1.3.0"
   }
 }
